# Datalix

./: .env.example  .gitignore  .replit  AUTHENTICATION_ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v3.0.0.md  DATABASE_MIGRATION_INSTRUCTIONS.md  DATABASE_SCHEMA.md  DATALIX_COMPLETE_DOCUMENTATION.md  DATALIX_SOFTWARE_ENGINEERING_DOCUMENT.md  DATA_STORAGE_EXPLAINED.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  EMAIL_CONFIRMATION_GUIDE.md  FEATURES_IMPLEMENTATION_STATUS.md  GOOGLE_OAUTH_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Internship_Report_DataLix_2.0.md  README.md  RENDER_DEPLOYMENT.md  SIGNUP_EXPLANATION.md  SUPABASE_RLS_MIGRATION_GUIDE.md  SUPABASE_USER_TABLE_INFO.md  app.py  database_schema.sql  design_guidelines.md  init_database.sql  init_database_with_rls.sql  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements-production.txt  requirements.txt  tailwind.config.ts
.streamlit/: config.toml
attached_assets/: DataLix-2.0-Updated-Software-Engineering-Document.md  Pasted--COMPLETE-COMPREHENSIVE-POINTERS-EVERY-ASPECT-TO-INCLUDE-Here-s-the-exhaustive-pointer--1762802432761_1762802432761.txt  Pasted--Changelog-Datalix-v2-0-0-What-s-New-Enhanced-Edition-This-document-outlines-all-major-1763220804205_1763220804214.txt  Pasted--DataLix-AI-Powered-Data-Analysis-Platform-Development-Specification-Project-Brief-You-are--1762801155976_1762801156027.txt  Pasted--table-name-messages-column-name-id-data-type-uuid-is-nullab-1763215579227_1763215579228.txt  final_internship_report_format (1)_1762976787678.doc  (+5 more)
client/: .env.example  index.html
(+62 files in other folders)
